--- a/index.html
+++ b/index.html
@@ -1,5 +1,54 @@
 ---
 layout: default
-title: Welcome
+title: Portfolio
 ---
-<h1>matrixfox.github.io</h1>
+<!-- JUMBOTRON
+      ================================================== -->
+      <h4>Featured <span>News</span></h4>
+      <a href="#"><div class='jumbotron'></div></a>
+      <!-- BANNER
+      ================================================== -->
+      <article class="banner row">
+        <section class="banner-inner col-lg-10">
+          <h2>pixelmatter.co /<span> web &amp; mobile development</span></h2>
+          <p>I need money for Bourbon and Anime too, but Link advertising services are the lowest form of PPC! Eat, Breathe and Sleep Web Development. Wake Up, Rinse and Repeat. Squandering a gift is like dying young, a waste...</p>
+        </section>
+        <section class="col-lg-2 text-center">
+          <button class='btn btn-default' type='submit'>Continue To Read <span class="glyphicon glyphicon-share-alt"></span></button>
+        </section>
+      </article>
+      <!-- PORTFOLIO
+      ================================================== -->
+      <!-- 1ST ROW -->
+      <article class="row">
+
+        <a href="http://codepen.io/matrixfox/pen/emqAh">
+        <figure class="col-sm-6 col-md-3 portfolio">
+          <img src="http://matrixfox.com/images/untitled-2.png" alt="..." class="thumbnail">
+          <figcaption class="overlay"><p>I've converted the lovely knotable login found on Dribble originally, but you can find it on Pentrest.</p></figcaption>
+        </figure>
+        </a>
+
+        <a href="#">
+        <figure class="col-sm-6 col-md-3 portfolio">
+          <img src="http://matrixfox.com/images/bootstrap-thumb.jpg" alt="Bootstrap 3 with a Custom Panel" class="thumbnail">
+          <figcaption class="overlay"><p>Bootstrap 3 with my custom panel to tweak the style ever so slightly.</p></figcaption>
+        </figure>
+        </a>
+
+        <a href="#">
+        <figure class="col-sm-6 col-md-3 portfolio">
+          <img src="http://matrixfox.com/images/pixel-matter-thumb.jpg"  alt="Pixel Matter.co Fluid-Width Design" class="thumbnail">
+          <figcaption class="overlay"><p>Pixel Matter.co was a spure of a moment. She has a fixed background on a fluid-width design.</p></figcaption>
+        </figure>
+        </a>
+
+        <a href="#">
+        <figure class="col-sm-6 col-md-3 portfolio">
+          <img src="http://matrixfox.com/images/matrixfox-thumb.jpg"  alt="Matrixfox.com Info Block" class="thumbnail">
+          <figcaption class="overlay"><p>A old pen, but spiced up. Simple Click and Drag, but can't be dragged off the screen.</p></figcaption>
+        </figure>
+        </a>
+
+      </article>
+      <!--  END 1ST ROW -->
