Added More Commits

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Portfolio
+meta: Matrixfox is my offical portfolio demo site. Not the best, but not the worst!
 ---
 <!-- JUMBOTRON
       ================================================== -->
