--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,10 @@ layout: default
 title: Contact
 meta: Send Matrixfox a quick message, or follow on Twitter and Spotify.
 ---
+<h4>Contact <span>Me</span></h4>
+
 <br>
+
 <section class="col-lg-12">
 <iframe src="https://embed.spotify.com/follow/1/?uri=spotify:user:matrixfox&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
 </section>
