--- a/404.html
+++ b/404.html
@@ -1,12 +1,11 @@
 --- 
 layout: default
+title: 404
+meta: Get out, I don't care where you go, You just can't stay here.
 ---
-<article>
-<figure>
-<img src="/images/404.jpg">
-<figcaption>
+<article class="four04 text-center">
 <h1>404</h1>
-<p>Sorry, but nothing matched your criteria.</p>
-</figcaption>
-</figure>
+<p>. . . . -   - - - - -   . . . . -</p>
+<br>
+<img src="/images/404.jpg">
 </article>
