--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ meta: Matrixfox is my offical portfolio demo site. Not the best, but not the wor
 <!-- JUMBOTRON
       ================================================== -->
       <h4>Featured <span>News</span></h4>
-      <a href="#"><div class='jumbotron'></div></a>
+      <a href="http://matrixfox.com/greendesign/"><div class='jumbotron'></div></a>
       <!-- BANNER
       ================================================== -->
       <article class="banner row">
@@ -15,7 +15,9 @@ meta: Matrixfox is my offical portfolio demo site. Not the best, but not the wor
           <p>I need money for Bourbon and Anime too, but Link advertising services are the lowest form of PPC! Eat, Breathe and Sleep Web Development. Wake Up, Rinse and Repeat. Squandering a gift is like dying young, a waste...</p>
         </section>
         <section class="col-lg-2 text-center">
-          <button class='btn btn-default'>Continue To Read <span class="glyphicon glyphicon-share-alt"></span></button>
+          <div class="btn-group">
+            <a href="http://matrixfox.com/greendesign/"><button class='btn btn-default'>Continue To Read <span class="glyphicon glyphicon-share-alt"></span></button></a>
+          </div>
         </section>
       </article>
       <!-- PORTFOLIO
