Better Meta Tags

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Contact
-meta: Send Matrixfox a quick message, or follow on Twitter and Spotify.
+meta: Send Matrixfox a quick message, or check online availability. Remember you can always contact me on Twitter, or by old fashioned email.
 ---
 <h4>Contact <span>Me</span></h4>
 
