--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Blog
-meta: Read all about Matrixfox's blog adventures. Today I'll do this, tomorrow I'll do that.
+meta: Read all about Matrixfox's blog adventures. Monthly posts are added. In the future check back for more news articles.
 ---
 
 <h4>News<span> Articles</span></h4>
