--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Portfolio
-meta: Matrixfox is my offical portfolio site. Always working in Mobile and Web Development. A small handpicked selection for a live demo. Honorably Hosted by GitHub
+meta: Matrixfox is my official portfolio website. A small live demo of my newest work. Always working in mobile and web development.
 ---
 <!-- JUMBOTRON
       ================================================== -->
