Better Hyperlink Button
Hope they fix this in HTML6!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ meta: Matrixfox is my official portfolio website. A small live demo of my newest
         </section>
         <section class="col-lg-2 text-center">
           <div class="btn-group">
-            <a href="http://matrixfox.com/greendesign/"><button class='btn btn-default'>Continue To Read <span class="glyphicon glyphicon-share-alt"></span></button></a>
+            <a href="http://matrixfox.com/greendesign/"><div class='btn btn-default'>Continue To Read <span class="glyphicon glyphicon-share-alt"></span></div></a>
           </div>
         </section>
       </article>
