Jekyll Adds Anonymous <p> Tags
Why?

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ meta: Matrixfox is my official portfolio website. A small live demo of my newest
         <a href="{{portfolio.source}}">
         <figure class="col-sm-6 col-md-3 portfolio">
           <img src="{{portfolio.image}}" alt="{{portfolio.title}}" class="thumbnail">
-          <figcaption class="overlay"><p>{{portfolio.content}}</p></figcaption>
+          <figcaption class="overlay">{{portfolio.content}}</figcaption>
         </figure>
         </a>
         {% endif %}
