Fixed Paginate Issue

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Portfolio
 meta: Matrixfox is my official portfolio website. A small live demo of my newest work. Always working in mobile and web development.
+pagination: 
+  enabled: true
 ---
 <!-- JUMBOTRON
       ================================================== -->
