--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,10 @@ meta: Send Matrixfox a quick message, or check online availability. Remember you
 ---
 <h4>Contact <span>Me</span></h4>
 
-<section class="col-lg-12">
-<a href="https://twitter.com/matrixfoxtard" class="twitter-follow-button" data-dnt="true">Follow @matrixfoxtard</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</section>
+<div class="github-card" data-github="matrixfox" data-width="400" data-height="" data-theme="default"></div>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+
+<div class="col-lg-12 twitter">
+    <a href="https://twitter.com/matrixfoxtard" class="twitter-follow-button" data-dnt="true">Follow @matrixfoxtard</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
