--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@ title: 404
 meta: Get out, I don't care where you go, You just can't stay here.
 ---
 
-<article class="four04 text-center">
-<h1>404</h1>
-<p>. . . . -   - - - - -   . . . . -</p>
-<br>
-<img src="/images/404.jpg">
-</article>
+<div class="four04 text-center">
+	<h1>404</h1>
+	<p>. . . . -   - - - - -   . . . . -</p>
+	<br>
+	<img src="/images/404.jpg">
+</div>
