--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ meta: Matrixfox is my official portfolio website. A small live demo of my newest
 pagination: 
   enabled: true
 ---
-<!-- JUMBOTRON
+      <!-- JUMBOTRON
       ================================================== -->
-      <h4>Featured <span>News</span></h4>
-      <a href="http://matrixfox.com/greendesign/"><div class='jumbotron'></div></a>
+      <div class="featured">
+        <h4>Featured <span>News</span></h4>
+        <a href="http://matrixfox.com/greendesign/"><div class='jumbotron'></div></a>
+      </div>
       <!-- BANNER
       ================================================== -->
       <article class="banner row">
